--- a/prof.hw.gb/store/composer.json
+++ b/prof.hw.gb/store/composer.json
@@ -1,5 +1,11 @@
 {
     "require": {
-        "twig/twig": "^2.0"
+        "twig/twig": "^2.0",
+        "phpunit/phpunit": "^7.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "app\\": ""
+        }
     }
 }
